css/main_page.css
html{
    margin: 0;
   
}
body{
    margin: 0;
    background-color: rgb(14, 16, 39);
    overflow: auto;
    font-family: sans-serif;
}
/*
Defines the sections of the page
*/

.page-select {
    display: flex;
    flex-direction: column;
    width: 15%;
    height: 100vh;
    left: 0%;
    gap: 0px 15px;
    position: fixed;
    justify-content: center;
    overflow: auto;
}
.page-select > a{
    text-transform: capitalize;
    font-style: italic;
    font-size: 1.5vmax;
    color:white;
    text-align: center;
    text-decoration: none;
    
    padding-top: 20%;
    padding-bottom: 20%;
    
    
}
.page-select > a:hover{
    background-color: #282E73;
}

@media screen and (max-width: 900px){
    
    .page-select {
        display: flex;
        flex-direction: row;
        width: 100%;
        height: auto;
        
        position: relative;

    }
    .page-select a{
        text-transform: capitalize;
        font-style: italic;
        font-size: 3vmin;
        color:white;
        text-align: center;
        text-decoration: none;
        padding-top: 2%;
        padding-bottom: 2%;
    
        padding-left: 5%;
        padding-right: 5%;
    
    
    }
    

}

@media screen and (max-width: 400px) {
  .page-select a {
    text-align: center;
    float: none;
  }
}

/* Content background covers everything except the sections of the page*/

.content-background {
    display: flex;
    flex-direction: column;
    left: 30%;
    width: 100%; 
    height: 85%;
    
}

.content{
    max-width: 70%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    color: white;
}

.content > p{
    text-transform: none;
    color: white;
    font-size: 3vmin;
}


/*Class for the image for the profile picture*/

.logos{
    display: flex;
    justify-content: center;
}

.logos > img{
    border-radius: 50%;
    max-width: 50%;
    height: auto;
    object-fit: contain;
    border: 0.5vh solid #ddd;
    
   
}

@media screen and (max-width: 900px){
    .logos{
        display: none;
    }

}





/* Intro contains the about section writing. Excludes the logos for linkedin and github profile  */

.intro{
    
    left: 10%;
    height: 100%;
    width: 100%;
    font-size: 3vmin;
    color: white;
    text-align: center;
    top: 8%;
}

.last-name{
    color: #5cd8cb;
}


.about-short{
    text-align: center;
}

.enrolled{
    color: rgb(64, 162, 216);
}

.contact{
    display: inline-flex;
    width: 100%;
    color: #90dbd3;
    text-align: center;
    justify-content: center;
    gap: 10px 10px;

}

.contact > a{
    display: flex;
    flex-direction: row;
    align-items: center;
    color: #90dbd3;
    font-size: 1.5vmin;
}

ion-icon {
    
    color: #90dbd3;
}


section > h2{ /* Section header size essentially */
    font-size: 3.5vmin;
}

p {
    margin: 0;
}

h1 {
    margin-bottom: 0;
}

/* Next Section is for the Education part */


#education {
    font-size: 3vmin;
    color: white;
    padding: 0;
    margin: 0;
    
}



.school {
  
    display:flex;
    flex-direction:row;
    justify-content: space-between;
    font-weight: bold;
    margin: 0;
    padding: 0;
   

}

.program{
    display:flex;
    flex-direction:row;
    justify-content: space-between;
    font-style: italic;
}

.courses {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.courses > h3 {
    display: flex;
    justify-content: center;
}

.course-tabs {
    display:flex;
    flex-direction: row;
    
}

.course-tabs button {
    background-color: rgb(14, 16, 39);
    color: white;
    font-size: 1.5vmax;
    width: 25%;
}
.course-tabs button.active {
    color: #90dbd3;
}

.course-tabs > button:hover {
    background-color: #282E73;
    
}

.year {
  display: none;
}

.year.visible {
  display: flex;
  flex-direction: column;
}

.year [data-year].visible {
  display: flex;
  flex-direction: column;
  
}


#experience {
    font-size: 3vmin; 
}

#projects {
    display:flex;
    flex-direction: column;
    font-size: 3vmin;
    width: 100%;
}



/* project section */
.project-select {
    display: flex;
    flex-direction: row;
    width: 100%;
}

.project-select button {
    background-color: rgb(14, 16, 39);
    color: white;
    font-size: 1.5vmax;
    width: 33.3333%;


}

.project-select button.active{
    color: #90dbd3;
}

.project-select button:hover{
    background-color: #282E73;
}


.project-title {
    display: flex;
    flex-direction: row;
}



.project-details [data-project] {
  display: none;
}

.project-details [data-project].visible {
  display: flex;
  flex-direction: column;
  
}

.project-tech [data-project].visible{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    
}

.project-tech span {
    display:inline-block;
    padding: 0.35rem 0.7rem;
    margin: 0.25rem;

    font-size: 1.5vmin;
    

    background-color: rgba(255, 255, 255, 0.05); /* subtle contrast */
    border: 1px solid rgba(255, 255, 255, 0.08);

    border-radius: 999px;

    transition: all 0.2s ease;
}

